libquantumida/g0/quantum_bmeasure
gates.c:365:7: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
             (reg->size + addsize) * sizeof(char));
             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
gates.c:543:7: warning: format specifies type 'int' but the argument has type 'unsigned long' [-Wformat]
             (reg->size + addsize) * sizeof(char));
             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2 warnings generated.
measure.c:571:1: error: use of undeclared identifier 'complex_float'
complex_float amplitude; // 0:xmm0_8.8 
^
measure.c:582:1: error: use of undeclared identifier 'amplitude'
amplitude = reg->node[i].amplitude; 
^
measure.c:583:6: warning: implicit declaration of function 'quantum_prob_inline_1' is invalid in C99 [-Wimplicit-function-declaration]
pa = quantum_prob_inline_1( amplitude) + pa; 
     ^
measure.c:583:29: error: use of undeclared identifier 'amplitude'
pa = quantum_prob_inline_1( amplitude) + pa; 
                            ^
measure.c:589:44: error: too many arguments to function call, expected 3, have 4
quantum_state_collapse( &out, pos, result, *reg); 
~~~~~~~~~~~~~~~~~~~~~~                     ^~~~
./qureg.h:72:1: note: 'quantum_state_collapse' declared here
extern quantum_reg quantum_state_collapse(int bit, int value, 
^
1 warning and 4 errors generated.
objcode.c:176:18: warning: passing an object that undergoes default argument promotion to 'va_start' has undefined behavior [-Wvarargs]
  va_start(args, operation);
                 ^
objcode.c:165:35: note: parameter of type 'unsigned char' is declared here
quantum_objcode_put(unsigned char operation, ...)
                                  ^
1 warning generated.
